Fixed spelling mistakes and new requirements section.

--- a/doc/paper/abstract.tex
+++ b/doc/paper/abstract.tex
@@ -17,13 +17,13 @@
 %
 %
 % Copyright (C)
-%   2015 Alexander Haase IT Services <support@alexhaase.de>
+%   2015-2016 Alexander Haase IT Services <support@alexhaase.de>
 %
 
 
 \section*{Abstract}
 
-staffAuth is a compilation of tools to authenticate maintenance employes at
-Linux based machines of customers. It should help to keep the employes accounts
-synchronised on all machines without the need to do this by hand or to send huge
-data packets on any change.
+staffAuth is a concept and a set of tools to authenticate maintenance employees
+at mainly Linux based machines and other services at customers' side. It should
+help to keep the employees' accounts synchronized on all machines without the
+need to do this by hand or to send huge data packets on any change.
