--- a/doc/paper/concept.tex
+++ b/doc/paper/concept.tex
@@ -17,7 +17,7 @@
 %
 %
 % Copyright (C)
-%   2015 Alexander Haase IT Services <support@alexhaase.de>
+%   2015-2016 Alexander Haase IT Services <support@alexhaase.de>
 %
 
 
@@ -28,7 +28,7 @@ increase security and decrease the maintenance overhead. It should be very easy
 to use, but not have any security issues. \\
 
 \textit{\textbf{WARNING}: This is an idea! It might be good and practicable, but
-this is no guaranty that it is the best and really secure}
+this is no guaranty that it is the best and really secure.}
 
 
 \subsection{User credentials}
