--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -17,7 +17,7 @@
 %
 %
 % Copyright (C)
-%   2015 Alexander Haase IT Services <support@alexhaase.de>
+%   2015-2016 Alexander Haase IT Services <support@alexhaase.de>
 %
 
 
@@ -75,5 +75,6 @@
 
 	\input{abstract}
 	\input{problem}
+	\input{requirements}
 	\input{concept}
 \end{document}
