--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -31,6 +31,10 @@
 
 \usepackage{float}
 \usepackage{hyperref}
+
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows}
+
 %\usepackage{cite}
 %\usepackage{amsmath}
 %\usepackage{multicol}
