Makred DNS config in doc/paper/idea as optional.

--- a/doc/paper/idea.tex
+++ b/doc/paper/idea.tex
@@ -45,7 +45,8 @@ security issues with DNS redirection attacks.
 \subsection{Basic structure}
 
 \begin{itemize}
-	\item DNS will be used to find a local authentication proxy server.
+	\item DNS will be used to find a local authentication proxy server in secure
+		networks.
 	\item The API will be accessed over HTTPS, so authentication can be
 		ensured with TLS certificates.
 	\item The proxy will pass requests to the API server to be used for the
@@ -70,7 +71,7 @@ security issues with DNS redirection attacks.
 
 	\begin{tikzpicture}[node distance = 4cm, auto]
 		\node [server] (api) at (0,0) {API};
-		\node [server] (dns) at (5,2) {DNS};
+		\node [server, fill=blue!10] (dns) at (5,2) {DNS};
 		\node [server] (proxy) at (5,-2) {Proxy};
 		\node [server] (server) at (10,0) {Server};
 		\node [user] (user) at (15,0) {User};
@@ -78,11 +79,11 @@ security issues with DNS redirection attacks.
 		\draw[request] (user.175) to [out=150,in=30] (server.5);
 		\node [label, align=center] (cap1) at (12.5, 0.75) {(1) login request};
 
-		\draw[request] (server.155) to [out=130,in=350] (dns.350);
+		\draw[request, color=red!50] (server.155) to [out=130,in=350] (dns.350);
 		\node [label, align=right] (cap2) at (8.5, 1.75)
 			{(2) DNS request to find proxy};
 
-		\draw[reply] (dns.335) to [out=300,in=170] (server.170);
+		\draw[reply, color=red!50] (dns.335) to [out=300,in=170] (server.170);
 		\node [label, align=left] (cap3) at (6.5, 0.4) {(3) DNS reply};
 
 		\draw[request] (server.190) to [out=190,in=40] (proxy.25);
