--- a/doc/paper/idea.tex
+++ b/doc/paper/idea.tex
@@ -31,11 +31,11 @@ accessed via a well defined API from outside, so you're free to use a backend of
 your choice. \\
 
 In general no passwords should be used at you customers' side. For login into
-machines SSH-keys should be used, thus this is an asymmetric system were the
-public key may be public accessible (which in case will hapen via API). For
-privileged access (sudo) onetime passwords should be used. Thus algorithms like
-TOTP are symmetric, not the client but the credential server should check the
-onetime password via API. \\
+machines SSH-keys should be used, thus this is an asymmetric system. The
+SSH-keys should be queried via API. For privileged access (sudo) onetime
+passwords should be used. Thus algorithms like TOTP\footnote{see
+\href{https://tools.ietf.org/html/rfc6238}{RFC 6238}} are symmetric, not the
+client but the credential server should check the onetime password via API. \\
 
 To avoid lots of configuration, a proxy server in the customers' network will be
 used, which can be found via DNS. The server should be authenticated to avoid
