Added API definition in paper.

--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -35,6 +35,9 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows}
 
+\usepackage{listings}
+\usepackage{xcolor}
+
 %\usepackage{cite}
 %\usepackage{amsmath}
 %\usepackage{multicol}
@@ -61,6 +64,9 @@
 \setlength{\columnsep}{50pt}
 
 
+% listings
+\definecolor{box_bg}{RGB}{238, 238, 238}
+
 
 %
 % document information
@@ -81,5 +87,6 @@
 	\input{problem}
 	\input{requirements}
 	\input{idea}
+	\input{api}
 	\input{concept}
 \end{document}
