--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -67,6 +67,13 @@
 % listings
 \definecolor{box_bg}{RGB}{238, 238, 238}
 
+\lstdefinelanguage{none}{
+	basicstyle=\small\ttfamily,
+	showstringspaces=false,
+	breaklines=true,
+	backgroundcolor=\color{box_bg}
+}
+
 
 %
 % document information
@@ -88,5 +95,6 @@
 	\input{requirements}
 	\input{idea}
 	\input{api}
+	\input{dns_config}
 	\input{concept}
 \end{document}
