Reworking text in paper.

--- a/doc/paper/abstract.tex
+++ b/doc/paper/abstract.tex
@@ -25,5 +25,9 @@
 
 staffAuth is a concept and a set of tools to authenticate maintenance employees
 at mainly Linux based machines and other services at customers' side. It should
-help to keep the employees' accounts synchronized on all machines without the
-need to do this by hand or to send huge data packets on any change.
+help to keep the employees' accounts synchronized accross all machines without
+the need to do this by hand or deploy huge data packets foreach modification. \\
+
+\textit{\textbf{WARNING}: This is a concept! It might be good and practicable,
+but it is not a guaranty that it is the best neither that it is the most
+secure.}
