--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -33,10 +33,11 @@
 \usepackage{hyperref}
 
 \usepackage{tikz}
-\usetikzlibrary{shapes,arrows}
+\usetikzlibrary{shapes,arrows,decorations.pathreplacing}
 
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{soul}
 
 %\usepackage{cite}
 %\usepackage{amsmath}
@@ -94,8 +95,8 @@
 	\input{problem}
 	\input{requirements}
 	\input{idea}
-	\input{api}
 	\input{dns_config}
+	\input{api}
 	\input{credentials}
 	\input{concept}
 \end{document}
