--- a/doc/paper/requirements.tex
+++ b/doc/paper/requirements.tex
@@ -30,10 +30,8 @@ the data could be manipulated. \\
 
 A second focus should be on \ul{simplicity}. The toolset should be easy to use,
 otherwise there is no benefit on using staffAuth. Every employee should use the
-same personal account accross all machines without the need to maintain the
-accounts independent per machine. \\
+same account accross all machines without the need to maintain the accounts
+independent per machine. \\
 
 In addition to this, the configuration at the customers' side should be simple.
 A new server should be integrated into the network in a couple of minutes.
-Credentials for accessing any data should not be managed for every machine
-indipendently, but a central gateway at the customers' side should do this job.
