Renamed to mauth and moved to new github account.

--- a/doc/paper/abstract.tex
+++ b/doc/paper/abstract.tex
@@ -1,7 +1,7 @@
-% This file is part of staffAuth.
+% This file is part of mauth.
 %
-% staffAuth is a free document: you can redistribute it and/or modify it under
-% the terms of the GNU General Public License as published by the Free Software
+% mauth is a free document: you can redistribute it and/or modify it under the
+% terms of the GNU General Public License as published by the Free Software
 % Foundation, either version 3 of the License, or (at your option) any later
 % version.
 %
@@ -23,8 +23,8 @@
 
 \section*{Abstract}
 
-staffAuth is a concept and a set of tools to authenticate maintenance employees
-at mainly Linux based machines and other services at customers' side. It should
+mauth is a concept and a set of tools to authenticate maintenance employees at
+mainly Linux based machines and other services at customers' side. It should
 help to keep the employees' accounts synchronized accross all machines without
 the need to do this by hand or deploy huge data packets foreach modification. \\
 
