--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -1,7 +1,7 @@
-% This file is part of staffAuth.
+% This file is part of mauth.
 %
-% staffAuth is a free document: you can redistribute it and/or modify it under
-% the terms of the GNU General Public License as published by the Free Software
+% mauth is a free document: you can redistribute it and/or modify it under the
+% terms of the GNU General Public License as published by the Free Software
 % Foundation, either version 3 of the License, or (at your option) any later
 % version.
 %
@@ -79,7 +79,7 @@
 %
 % document information
 %
-\title{staffAuth}
+\title{mauth}
 \author{Alexander Haase (\href{mailto:ahaase@alexhaase.de}{ahaase@alexhaase.de})}
 \date{\today}
 
