--- a/doc/paper/requirements.tex
+++ b/doc/paper/requirements.tex
@@ -1,7 +1,7 @@
-% This file is part of staffAuth.
+% This file is part of mauth.
 %
-% staffAuth is a free document: you can redistribute it and/or modify it under
-% the terms of the GNU General Public License as published by the Free Software
+% mauth is a free document: you can redistribute it and/or modify it under the
+% terms of the GNU General Public License as published by the Free Software
 % Foundation, either version 3 of the License, or (at your option) any later
 % version.
 %
@@ -29,8 +29,8 @@ MITM\footnote{\textbf{M}an \textbf{I}n \textbf{T}he \textbf{M}iddle} attacks, if
 the data could be manipulated. \\
 
 A second focus should be on \ul{simplicity}. The toolset should be easy to use,
-otherwise there is no benefit on using staffAuth. Every employee should use the
-same account accross all machines without the need to maintain the accounts
+otherwise there is no benefit on using mauth. Every employee should use the same
+account accross all machines without the need to maintain the accounts
 independent per machine. \\
 
 In addition to this, the configuration at the customers' side should be simple.
